--- a/source/contactUs.html
+++ b/source/contactUs.html
@@ -23,82 +23,82 @@
     <link href="css/style.min.css" rel="stylesheet" />
     <!-- endbuild -->
   </head>
-  <body class="font_content">
+  <body>
     @@include('blocks/header.html')
     <main class="main">
-      <div class="page_container">
-        <section class="contact_us">
-          <h1 class="main__title font_title contact_us_title">Contact us</h1>
-          <ul class="breadcrump font_decor">
-            <li class="breadcrump_item">
+      <div class="page-container">
+        <section class="contact-us">
+          <h1 class="main-title font-title contact-us__title">Contact us</h1>
+          <ul class="breadcrump font-decor">
+            <li class="breadcrump__item">
               <a href="../index.html">Home</a>
             </li>
-            <li class="breadcrump_item">
+            <li class="breadcrump__item">
               <a href="./contactUs.html">Contact Us</a>
             </li>
           </ul>
-          <div class="page_content_wrapper">
-            <form class="contact_form" action="#">
-              <div class="contact_form__name_container">
-                <label for="name-field" class="contact_form__name_field"
+          <div class="contact-us__wrapper">
+            <form class="contact-form" action="#">
+              <div class="contact-form__name-container">
+                <label for="name-field" class="contact-form__name-field"
                   >Name</label
                 >
                 <input
                   type="text"
                   id="name-field"
-                  class="contact_form__field"
+                  class="contact-form__field"
                 />
               </div>
-              <div class="contact_form__phone_email_container">
-                <div class="contact_form__phone_container">
-                  <label for="phone-field" class="contact_form__phone_field"
+              <div class="contact-form__phone-email-container">
+                <div class="contact-form__phone-container">
+                  <label for="phone-field" class="contact-form__phone-field"
                     >Phone</label
                   >
                   <input
                     type="tel"
                     id="phone-field"
-                    class="contact_form__field"
+                    class="contact-form__field"
                   />
                 </div>
-                <div class="contact_form__email_container">
-                  <label for="email-field" class="contact_form__email_field"
+                <div class="contact-form__email-container">
+                  <label for="email-field" class="contact-form__email-field"
                     >Email</label
                   >
                   <input
                     type="email"
                     id="email-field"
-                    class="contact_form__field"
+                    class="contact-form__field"
                   />
                 </div>
               </div>
-              <div class="contact_form__message_container">
-                <label for="message-field" class="contact_form__message_field"
+              <div class="contact-form__message-container">
+                <label for="message-field" class="contact-form__message-field"
                   >Message</label
                 >
                 <textarea
-                  class="contact_form__field"
+                  class="contact-form__field"
                   id="message-field"
                   cols="30"
                   rows="8"
                 >
                 </textarea>
               </div>
-              <div class="contact_form__checkbox_container">
+              <div class="contact-form__checkbox-container">
                 <input
                   type="checkbox"
                   id="checkbox-field"
-                  class="contact_form__checkbox"
+                  class="contact-form__checkbox"
                 />
-                <label for="checkbox-field" class="contact_form__checkbox-text"
+                <label for="checkbox-field" class="contact-form__checkbox-text"
                   >By clicking on the button, you consent to the processing of
                   your personal data</label
                 >
               </div>
-              <button type="submit" class="contact_form__submit_button button">
+              <button type="submit" class="contact-form__submit-button button">
                 Submit
               </button>
             </form>
-            <div class="support_info">
+            <div class="contact-us__support-info">
               <p>
                 Our support team are on-hand to assist with any issues you are
                 experiencing.
@@ -107,7 +107,7 @@
                 Please use the form to contact us with your needs. Send us a
                 message and we'll respond as soon as possible.
               </p>
-              <span class="support_appeal font_title">
+              <span class="contact-us__support-appeal font-title">
                 An expert is waiting to help you!
               </span>
             </div>
