--- a/source/index.html
+++ b/source/index.html
@@ -24,34 +24,34 @@
     <link href="css/style.min.css" rel="stylesheet" />
     <!-- endbuild -->
   </head>
-  <body class="font_content">
+  <body>
     @@include('blocks/header.html')
     <main class="main">
-      <div class="page_container">
+      <div class="page-container">
         <section class="banner">
           <div class="banner__container">
             <div class="banner__changer">
-              <div class="banner__number_container">
-                <span class="banner__number font_title">01</span>
+              <div class="banner__number-container">
+                <span class="banner__number font-title">01</span>
               </div>
-              <ul class="banner__change_buttons">
-                <li class="banner__change_button_item">
-                  <button type="button" class="banner__change_button"></button>
+              <ul class="banner__change-buttons">
+                <li class="banner__change-item">
+                  <button type="button" class="banner__button"></button>
                 </li>
-                <li class="banner__change_button_item">
-                  <button type="button" class="banner__change_button"></button>
+                <li class="banner__change-item">
+                  <button type="button" class="banner__button"></button>
                 </li>
-                <li class="banner__change_button_item">
-                  <button type="button" class="banner__change_button"></button>
+                <li class="banner__change-item">
+                  <button type="button" class="banner__button"></button>
                 </li>
-                <li class="banner__change_button_item">
-                  <button type="button" class="banner__change_button"></button>
+                <li class="banner__change-item">
+                  <button type="button" class="banner__button"></button>
                 </li>
               </ul>
             </div>
-            <div class="banner__content_container">
-              <h1 class="banner__title font_title">The ooh noo collection</h1>
-              <p class="banner__design_info font_decor">Designed in Slovenia</p>
+            <div class="banner__content">
+              <h1 class="banner__title font-title">The ooh noo collection</h1>
+              <p class="banner__design-info font-decor">Designed in Slovenia</p>
               <a href="#" class="button explore_button">Explore now</a>
             </div>
           </div>
@@ -62,89 +62,89 @@
           </div>
         </section>
         <section class="category">
-          <h2 class="category__title font_title">Category Products</h2>
+          <h2 class="category__title font-title">Category Products</h2>
           <ul class="category__list">
-            <li class="category__list_item">
-              <a href="./toys.html" class="category__item_link" tabindex="0">
+            <li class="category__list-item">
+              <a href="./toys.html" class="category__link" tabindex="0">
                 <img
                   src="../img/images/apparelKids.jpg"
                   alt="Apparel kids image"
-                  class="category_img"
+                  class="category__img"
                 />
-                <div class="category__name font_title">
+                <div class="category__name font-title">
                   <p>Apparel kids</p>
                 </div>
               </a>
             </li>
-            <li class="category__list_item">
-              <a href="./toys.html" class="category__item_link" tabindex="0">
+            <li class="category__list-item">
+              <a href="./toys.html" class="category__link" tabindex="0">
                 <img
                   src="../img/images/holidayShop.jpg"
                   alt="Holiday shop image"
-                  class="category_img"
+                  class="category__img"
                 />
-                <div class="category__name font_title">
+                <div class="category__name font-title">
                   <p>Holiday shop</p>
                 </div>
               </a>
             </li>
-            <li class="category__list_item">
-              <a href="./toys.html" class="category__item_link" tabindex="0">
+            <li class="category__list-item">
+              <a href="./toys.html" class="category__link" tabindex="0">
                 <img
                   src="./img/images/toys.jpg"
                   alt="Toys image"
-                  class="category_img"
+                  class="category__img"
                 />
-                <div class="category__name font_title">
+                <div class="category__name font-title">
                   <p>Toys</p>
                 </div>
               </a>
             </li>
-            <li class="category__list_item">
-              <a href="./toys.html" class="category__item_link" tabindex="0">
+            <li class="category__list-item">
+              <a href="./toys.html" class="category__link" tabindex="0">
                 <img
                   src="./img/images/accessories.jpg"
                   alt="Accessories image"
-                  class="category_img"
+                  class="category__img"
                 />
-                <div class="category__name font_title">
+                <div class="category__name font-title">
                   <p>Accessories</p>
                 </div>
               </a>
             </li>
-            <li class="category__list_item hidden_item">
-              <a href="./toys.html" class="category__item_link" tabindex="0">
+            <li class="category__list-item">
+              <a href="./toys.html" class="category__link" tabindex="0">
                 <img
                   src="../img/images/sale.jpg"
                   alt="Sale image"
-                  class="category_img"
+                  class="category__img"
                 />
-                <div class="category__name font_title">
+                <div class="category__name font-title">
                   <p>Sale</p>
                 </div>
               </a>
             </li>
-            <li class="category__list_item hidden_item">
-              <a href="./toys.html" class="category__item_link" tabindex="0">
+            <li class="category__list-item">
+              <a href="./toys.html" class="category__link" tabindex="0">
                 <img
                   src="../img/images/apparelAdults.jpg"
                   alt="Apparel adults image"
-                  class="category_img"
+                  class="category__img"
                 />
-                <div class="category__name font_title">
+                <div class="category__name font-title">
                   <p>Apparel adults</p>
                 </div>
               </a>
             </li>
           </ul>
           <div class="category__scroll">
-            <button class="category__btn_left" type="button">
-              <span class="category__btn_text">Left scroll</span>
+            <button class="category__btn-left" type="button">
+              <span class="category__btn-text">Left scroll</span>
             </button>
-            <button class="category__btn_right" type="button">
-              <span class="category__btn_text"> Right scroll</span>
+            <button class="category__btn-right" type="button">
+              <span class="category__btn-text"> Right scroll</span>
             </button>
-            <p class="text category__nav_commentary">
+            <p class="category__scroll-commentary">
               Modern finds for the modern home. Curated goods by unique
               designers around the world from fashion to furniture for kids and
               adults.
@@ -160,25 +160,25 @@
             />
           </div>
           <div class="service__info">
-            <h2 class="service__title font_title">Delivery</h2>
+            <h2 class="service__title font-title">Delivery</h2>
             <ul class="service__list">
-              <li class="service__list_item">
-                <button class="service__button font_decor" type="button">
+              <li class="service__list-item">
+                <button class="service__button font-decor" type="button">
                   Delivery
                 </button>
               </li>
-              <li class="service__list_item">
-                <button class="service__button font_decor" type="button">
+              <li class="service__list-item">
+                <button class="service__button font-decor" type="button">
                   Guarantee
                 </button>
               </li>
-              <li class="service__list_item">
-                <button class="service__button font_decor" type="button">
+              <li class="service__list-item">
+                <button class="service__button font-decor" type="button">
                   Credit
                 </button>
               </li>
             </ul>
-            <div class="service_text">
+            <div class="service__text">
               <p>
                 Some days i feel like i've been working on dlk my entire life
                 and there are other days that i am completely shocked that four
@@ -198,36 +198,34 @@
         <section class="partners">
           <h2 class="parters__title">Partners</h2>
           <ul class="partners__list">
-            <li class="partners__list_item">
+            <li class="partners__list-item">
               <img src="./img/images/mailRU.png" alt="mail.ru logo" />
             </li>
-            <li class="partners__list_item">
+            <li class="partners__list-item">
               <img src="./img/images/apple.png" alt="Apple logo" />
             </li>
-            <li class="partners__list_item">
+            <li class="partners__list-item">
               <img src="./img/images/eltexLogo.png" alt="Eltex logo" />
             </li>
-            <li class="partners__list_item">
+            <li class="partners__list-item">
               <img src="./img/images/owoxLogo.png" alt="Owox logo" />
             </li>
           </ul>
         </section>
-        <div class="additional_services">
-          <section class="additional_service">
-            <h2 class="additional_service__title font_title">
-              Design life kids
-            </h2>
-            <span class="additional_service__notice font_decor">About us</span>
-            <div class="text additional_service__text">
+        <div class="supplement">
+          <section class="supplement__article">
+            <h2 class="supplement__title font-title">Design life kids</h2>
+            <span class="supplement__notice font-decor">About us</span>
+            <p class="supplement__text">
               Some days i feel like i've been working on dlk my entire life and
               there are other days that i am completely shocked that four years
               have flown by. It's simply magical.
-            </div>
-            <a href="./toys.html" class="button buy_now_button">Buy now</a>
+            </p>
+            <a href="./toys.html" class="button">Buy now</a>
           </section>
-          <section class="contacts">
-            <h2 class="additional_service__title font_title">Contacts</h2>
-            <p class="text contacts__text">
+          <section class="supplement__contacts">
+            <h2 class="supplement__title font-title">Contacts</h2>
+            <p class="supplement__contacts-text">
               Some days i feel like i've been working on dlk my entire life and
               there are other days that i am completely shocked that four years
               have flown by. It's simply magical.
@@ -238,7 +236,7 @@
               height="196"
               style="border: 0"
               allowfullscreen=""
-              class="map"
+              class="supplement__map"
               loading="lazy"
               referrerpolicy="no-referrer-when-downgrade"
             ></iframe>
@@ -247,71 +245,67 @@
       </div>
     </main>
     @@include('blocks/footer.html')
-    <div class="popup_container">
-      <section class="popup">
-        <h1 class="popup_title">Contact us</h1>
-        <div class="contact_form_wrapper">
-          <form class="contact_form font_popup" action="#">
-            <div class="contact_form__name_container">
-              <label for="name-field" class="contact_form__name_field"
+    <div class="popup">
+      <section class="popup__content">
+        <h1 class="popup__title hidden-item">Contact us</h1>
+        <div class="popup__wrapper">
+          <form class="contact-form font-popup" action="#">
+            <div class="contact-form__name-container">
+              <label for="name-field" class="contact-form__name-field"
                 >Name</label
               >
-              <input type="text" id="name-field" class="contact_form__field" />
+              <input type="text" id="name-field" class="contact-form__field" />
             </div>
-            <div class="contact_form__phone_email_container">
-              <div class="contact_form__phone_container">
-                <label for="phone-field" class="contact_form__phone_field"
+            <div class="contact-form__phone-email-container">
+              <div class="contact-form__phone-container">
+                <label for="phone-field" class="contact-form__phone-field"
                   >Phone</label
                 >
                 <input
                   type="tel"
                   id="phone-field"
-                  class="contact_form__field"
+                  class="contact-form__field"
                 />
               </div>
-              <div class="contact_form__email_container">
-                <label for="email-field" class="contact_form__email_field"
+              <div class="contact-form__email-container">
+                <label for="email-field" class="contact-form__email-field"
                   >Email</label
                 >
                 <input
                   type="email"
                   id="email-field"
-                  class="contact_form__field"
+                  class="contact-form__field"
                 />
               </div>
             </div>
-            <div class="contact_form__message_container">
-              <label for="message-field" class="contact_form__message_field"
+            <div class="contact-form__message-container">
+              <label for="message-field" class="contact-form__message-field"
                 >Message</label
               >
               <textarea
-                class="contact_form__field"
+                class="contact-form__field"
                 id="message-field"
                 cols="30"
                 rows="10"
               >
               </textarea>
             </div>
-            <div class="contact_form__checkbox_container">
-              <input
-                type="checkbox"
-                id="checkbox-field"
-                class="contact_form__checkbox"
-              />
-              <label for="checkbox-field" class="contact_form__checkbox-text"
+            <div class="contact-form__checkbox-container">
+              <input type="checkbox" id="checkbox-field" class="checkbox" />
+              <label for="checkbox-field" class="checkbox__name"
                 >By clicking on the button, you consent to the processing of
                 your personal data</label
               >
             </div>
-            <button type="submit" class="contact_form__submit_button button">
+            <button type="submit" class="contact-form__submit-button button">
               Submit
             </button>
           </form>
-          <button class="popup_close"></button>
+          <button class="popup__close"></button>
         </div>
       </section>
     </div>
-    <script src="./js/indexScript.js"></script>
+    <script src="js/indexScript.js"></script>
     <script src="js/app.js" defer></script>
   </body>
 </html>
